k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cicd-backend
  namespace: cicd

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cicd-backend

  template:
    metadata:
      labels:
        app: cicd-backend

    spec:
      containers:
        - name: backend
          image: cicd-backend:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
