k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cicd-frontend
  namespace: cicd

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cicd-frontend

  template:
    metadata:
      labels:
        app: cicd-frontend

    spec:
      containers:
        - name: frontend
          image: cicd-frontend:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
