k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cicd-backend
  namespace: cicd

spec:
  selector:
    app: cicd-backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
