k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cicd-frontend
  namespace: cicd

spec:
  selector:
    app: cicd-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: NodePort
