k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-ingress
  namespace: cicd
spec:
  ingressClassName: nginx

  rules:
    - host: cicd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cicd-backend
                port:
                  number: 8000
